--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Noah Template</title>
+	<title>hellodeolu</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -121,7 +121,7 @@
 								<img class="img-responsive about-img" src="images/about.jpg" alt="html5 bootstrap template by colorlib.com">
 							</div>
 							<div class="item">
-								<img class="img-responsive about-img" src="images/about-2.jpg" alt="html5 bootstrap template by colorlib.com">
+								<img class="img-responsive about-img" src="images/about.jpg" alt="html5 bootstrap template by colorlib.com">
 							</div>
 						</div>
 					</div>
@@ -129,17 +129,17 @@
 						<div class="about-desc">
 							<div class="owl-carousel3">
 								<div class="item">
-									<h2><span>Noah</span><span>Henderson</span></h2>
+									<h2><span>Adeolu</span><span>Oyinlola</span></h2>
 								</div>
 								<div class="item">
-									<h2><span>I'm</span><span>A Designer</span></h2>
+									<h2><span>I'm</span><span>Technical Content Creator</span></h2>
 								</div>
 							</div>
 							<div class="desc">
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>A small river named Duden <a href="#">flows by their place</a> and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+								<p>Fueling the future of DevOps and cloud computing, <a href="#">I specialize in</a> crafting engaging, insightful, impactful content that bridges the gap between complex concepts and accessible knowledge. Driven by a passion for learning and sharing, I am dedicated to empowering others through every medium—be it blogs, videos, e-books, or infographics.</p>
 								<p class="colorlib-social-icons">
 									<a href="#"><i class="icon-facebook4"></i></a>
 									<a href="#"><i class="icon-twitter3"></i></a>
@@ -397,12 +397,12 @@
 		<div id="colorlib-testimony">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Testimonies</h2>
+					<h2 class="bold">Partners</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Testimonies</span>
-						<h2>Clients Says</h2>
+						<span>Partners</span>
+						<h2>Trusted by</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -457,8 +457,8 @@
 							<div class="row">
 								<div class="col-md-10">
 									<h2>Let's Talk</h2>
-									<p>A small river named Duden flows by their place and supplies.</p>
-									<p><a href="#">noah@info.com</a></p>
+									<p>as rich as your reach.</p>
+									<p><a href="#">deoluoyinlola@gmail.com.com</a></p>
 									<p class="colorlib-social-icons">
 										<a href="#"><i class="icon-facebook4"></i></a>
 										<a href="#"><i class="icon-twitter3"></i></a>
