--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 							<div class="one-third">
 								<div class="row">
 									<div class="col-md-12 col-md-offset-0 animate-box intro-heading">
-										<span>My Services</span>
-										<h2>Here Are Some of My Skills</h2>
+										<span>Number Don't Lies</span>
+										<h2>Here Are Some of My Metrics</h2>
 									</div>
 								</div>
 								<div class="row">
@@ -176,41 +176,43 @@
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>1 - Graphic Design</h3>
+											<h3>Impressions</h3>
 											<ul>
-												<li>UI Design</li>
-												<li>Website &amp; Digital Design</li>
-												<li>Brading &amp; Visual Identity</li>
-												<li>Print Design</li>
+												<li>1M + on LinkedIn</li>
+												<li>500,000 + on YouTube</li>
+												<li>1M + on LinkedIn</li>
+												<!-- <li>Website &amp; Digital Design</li> -->
+												<!-- <li>Brading &amp; Visual Identity</li> -->
+												<!-- <li>Print Design</li> -->
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>3 - Front End Development</h3>
+											<h3>Blogs</h3>
 											<ul>
-												<li>HTML / CSS</li>
-												<li>JS &amp; Jquery Startup</li>
-												<li>WordPress</li>
-												<li>Jomla</li>
+												<li>20 + technical blogs</li>
+												<li>30 + random blogs post</li>
+												<!-- <li>WordPress</li> -->
+												<!-- <li>Jomla</li> -->
 											</ul>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>2 - Illustration</h3>
+											<h3>Audios/Videos</h3>
 											<ul>
-												<li>Editorial</li>
-												<li>Narrative</li>
-												<li>Motion Graphics</li>
-												<li>Animation</li>
-												<li>Visual Effects</li>
+												<li>100 + GIFs/infographics </li>
+												<!-- <li>Narrative</li> -->
+												<li>70 + Tutorial Videos</li>
+												<li>5 + Motion Graphics</li>
+												<li>5 + Visual Effects</li>
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>4 - Web Marketing</h3>
+											<h3>Clients</h3>
 											<ul>
-												<li>Sales Marketing</li>
-												<li>Invoice</li>
-												<li>eCommerce</li>
+												<li>10 + clients</li>
+												<!-- <li>Invoice</li> -->
+												<!-- <li>eCommerce</li> -->
 											</ul>
 										</div>
 									</div>
@@ -458,7 +460,7 @@
 								<div class="col-md-10">
 									<h2>Let's Talk</h2>
 									<p>as rich as your reach.</p>
-									<p><a href="#">deoluoyinlola@gmail.com.com</a></p>
+									<p><a href="#">deoluoyinlola@gmail.com</a></p>
 									<p class="colorlib-social-icons">
 										<a href="#"><i class="icon-facebook4"></i></a>
 										<a href="#"><i class="icon-twitter3"></i></a>
@@ -492,7 +494,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-pb-sm">
+						<!-- <div class="col-md-4 col-pb-sm">
 							<h2>Newsletter</h2>
 							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
 							<div class="subscribe text-center">
@@ -501,13 +503,13 @@
 									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
 								&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</p>
 						</div>
