--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		<div id="colorlib-services">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Services</h2>
+					<h2 class="bold">Numbers</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
@@ -165,7 +165,7 @@
 								<div class="row">
 									<div class="col-md-12 col-md-offset-0 animate-box intro-heading">
 										<span>Number Don't Lies</span>
-										<h2>Here Are Some of My Metrics</h2>
+										<h2>Here Are Some of My Numbers</h2>
 									</div>
 								</div>
 								<div class="row">
@@ -208,9 +208,9 @@
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>Clients</h3>
+											<h3>Partners</h3>
 											<ul>
-												<li>10 + clients</li>
+												<li>10 + Partners</li>
 												<!-- <li>Invoice</li> -->
 												<!-- <li>eCommerce</li> -->
 											</ul>
